add tailwind, rewrite some part of landing page to mobile

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
       type="image/x-icon"
       href="favicon.ico"
     />
+    <link
+      href="/dist/output.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <smarti-root></smarti-root>
