--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>SmartiClient</title>
-    <base href="/" />
+    <base href="/"/>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
@@ -14,8 +14,8 @@
       href="favicon.ico"
     />
     <link
+      type="text/css"
       href="/dist/output.css"
-      rel="stylesheet"
     />
   </head>
   <body>
