--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="favicon.ico"
+      href="assets/img/logo.png"
     />
     <link
       type="text/css"
